# Python-TODOAPP

lahore-class/: .env  pyproject.toml
lahore-class/app/: main.py  settings.py
