[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Muhammad Nouman Attique <nomiking0072012@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["stanard"], version = "^0.28.0"}
sqlmodel = "^0.0.16"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
